classDiagram
    %% Base Classes
    class UserBase {
        +email: EmailStr
        +is_active: bool
        +is_superuser: bool
        +full_name: str|None
    }

    class PersonaBase {
        +title: str
        +description: str|None
    }

    class ArchetypeBase {
        +title: str
        +description: str|None
    }

    class TraitBase {
        +name: str
        +description: str|None
        +archetype_only: bool
        +max_active_personas: int|None
    }

    %% Create/Update Classes
    class UserCreate {
        +password: str
    }

    class UserUpdate {
        +email: EmailStr|None
        +password: str|None
    }

    class PersonaCreate {
        +archetype_id: uuid.UUID|None
    }

    class PersonaUpdate {
        +title: str|None
    }

    class ArchetypeCreate {
    }

    class ArchetypeUpdate {
        +title: str|None
    }

    class TraitCreate {
    }

    class TraitUpdate {
        +name: str|None
        +description: str|None
        +archetype_only: bool|None
        +max_active_personas: int|None
    }

    %% Database Models
    class User {
        +id: uuid.UUID
        +hashed_password: str
    }

    class Persona {
        +id: uuid.UUID
        +enabled: bool
        +title: str
        +persona_name: str|None
        +archetype_id: uuid.UUID|None
        +owner_id: uuid.UUID
    }

    class Archetype {
        +id: uuid.UUID
        +title: str
        +archetype_name: str
        +enabled: bool
        +created_at: datetime
        +updated_at: datetime|None
    }

    class Trait {
        +id: uuid.UUID
        +created_at: datetime
        +updated_at: datetime|None
    }

    %% Link Models
    class ArchetypeTraitLink {
        +archetype_id: uuid.UUID
        +trait_id: uuid.UUID
        +is_modifiable: bool
        +modifiable_at_creation_only: bool
        +is_required: bool
        +created_at: datetime
        +updated_at: datetime|None
    }

    class PersonaTraitLink {
        +persona_id: uuid.UUID
        +trait_id: uuid.UUID
        +trait_value: str|None
        +is_active: bool
        +created_at: datetime
        +updated_at: datetime|None
    }

    %% Public Response Models
    class UserPublic {
        +id: uuid.UUID
    }

    class PersonaPublic {
        +id: uuid.UUID
        +archetype_id: uuid.UUID|None
    }

    class ArchetypePublic {
        +id: uuid.UUID
        +archetype_name: str
        +enabled: bool
    }

    class TraitPublic {
        +id: uuid.UUID
    }

    %% Collection Response Models
    class UsersPublic {
        +data: list[UserPublic]
        +count: int
    }

    class PersonasPublic {
        +data: list[PersonaPublic]
        +count: int
    }

    class ArchetypesPublic {
        +data: list[ArchetypePublic]
        +count: int
    }

    class TraitsPublic {
        +data: list[TraitPublic]
        +count: int
    }

    %% Inheritance
    UserBase <|-- UserCreate
    UserBase <|-- UserUpdate
    UserBase <|-- User
    UserBase <|-- UserPublic

    PersonaBase <|-- PersonaCreate
    PersonaBase <|-- PersonaUpdate
    PersonaBase <|-- Persona
    PersonaBase <|-- PersonaPublic

    ArchetypeBase <|-- ArchetypeCreate
    ArchetypeBase <|-- ArchetypeUpdate
    ArchetypeBase <|-- Archetype
    ArchetypeBase <|-- ArchetypePublic

    TraitBase <|-- TraitCreate
    TraitBase <|-- TraitUpdate
    TraitBase <|-- Trait
    TraitBase <|-- TraitPublic

    %% Relationships
    User "1" -- "many" Persona : owns
    Archetype "1" -- "many" Persona : base for

    Archetype "many" -- "many" Trait : has >
    ArchetypeTraitLink -- Archetype : links
    ArchetypeTraitLink -- Trait : links

    Persona "many" -- "many" Trait : has >
    PersonaTraitLink -- Persona : links
    PersonaTraitLink -- Trait : links

    %% Collection Relationships
    UserPublic "many" --o "1" UsersPublic : in collection
    PersonaPublic "many" --o "1" PersonasPublic : in collection
    ArchetypePublic "many" --o "1" ArchetypesPublic : in collection
    TraitPublic "many" --o "1" TraitsPublic : in collection
